新增all模式，能支持任意阻塞式或者并行场景的异步调用。

--- a/mytest.html
+++ b/mytest.html
@@ -110,7 +110,7 @@
           }
       },
       function(err, results){
-          console.log(results);
+          console.log("parallel over and series start :"+JSON.stringify(results));
           async.series({
             three:function(callback){//第一个直接用results
                 console.log(3+"-->"+JSON.stringify(results));
